# arch-review-assistant

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: finding-gap.md
.github/workflows/: ci.yml  publish.yml  security.yml
.streamlit/: config.toml
docs/: publishing.md
examples/: ecommerce-basic.md  hr-saas-azure.md  innomotics-architecture.md
src/arch_review/: __init__.py  adr_generator.py  cli.py  engine.py  models.py  models_adr.py  telemetry.py
src/arch_review/feedback/: __init__.py  store.py
src/arch_review/output/: __init__.py  adr_writer.py  formatter.py
src/arch_review/prompts/: __init__.py  adr.py  review.py
src/arch_review/skills/: __init__.py
src/arch_review/squad/: __init__.py  manager.py  memory.py  prompts.py  squad.py
src/arch_review/utils/: __init__.py  extractor.py  json_parser.py
tests/: conftest.py  test_adr.py  test_engine.py  test_feedback.py  test_json_parser.py  test_pdf_export.py  test_soul_skills.py  test_squad.py  test_telemetry.py
web/: app.py  i18n.py  pdf_export.py  squad_office.py
